--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -7,7 +7,7 @@
 
 <div class="text_big">
   <p>The ceremony & the party will both be held at
-  <a href="http://mannfamilyfarm.com/" target="_blank">Mann Family Farm</a> in the beautiful coastal town of Bolinas California.</span>
+  <a href="http://mannfamilyfarm.com/" target="_blank">Mann Family Farm</a> in the beautiful coastal town of Bolinas, California.</span>
   Please make sure to <a href="/rsvp">RSVP here.</a></p>
 </div>
 
