--- a/templates/body.mustache
+++ b/templates/body.mustache
@@ -88,10 +88,10 @@
 		    <div class="topmenu_line_top"></div>
         <nav id="topmenu">
           <ul class="dropdown">
-            <li class="menu-level-0{{#if isIndex}} current-menu-ancestor{{/if}}"><a href="/"><span>HOME</span></a></li>
-          	<li class="menu-level-0{{#if isDayOf}} current-menu-ancestor{{/if}}"><a href="/dayof"><span>DAY OF</span></a></li>
-            <li class="menu-level-0{{#if isAccomodation}} current-menu-ancestor{{/if}}"><a href="/accomodation"><span>ACCOMODATION</span></a></li>
-            <li class="menu-level-0  {{#if isRSVP}}current-menu-item{{/if}}"><a href="/rsvp"><span>RSVP</span></a></li>
+            <li class="menu-level-0 {{#if isIndex}}current-menu-item{{/if}}"><a href="/"><span>HOME</span></a></li>
+          	<li class="menu-level-0 {{#if isDayOf}}current-menu-item{{/if}}"><a href="/dayof"><span>DAY OF</span></a></li>
+            <li class="menu-level-0 {{#if isAccomodation}}current-menu-item{{/if}}"><a href="/accomodation"><span>ACCOMODATION</span></a></li>
+            <li class="menu-level-0 {{#if isRSVP}}current-menu-item{{/if}}"><a href="/rsvp"><span>RSVP</span></a></li>
             <li class="menu-level-0 {{#if isRegistry}}current-menu-item{{/if}}"><a href="/registry"><span>REGISTRY</span></a></li>
             <li class="menu-level-0 {{#if isGallery}}current-menu-item{{/if}}"><a href="/gallery"><span>GALLERY</span></a></li>
           </ul>
