fixed registry images.

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -47,7 +47,7 @@ your liking.
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	width: 390px;
+	width: 90%;
 	margin: auto;
 }
 
