--- a/templates/registry.mustache
+++ b/templates/registry.mustache
@@ -1,30 +1,34 @@
 <div class="text_big">
-<p>We are registered at the following stores. Just <strong>click the photo or the name</strong> of the store to go right to our registry. Thank you so much!</p>
+<p>If you want to get us a gift (and who are we to complain if you do), we are
+registered with <a href="http://zola.com/registry/cambiandben" target="_blank">zola.com</a>.
 </div>
+<p>
+
+</p>
 
 <div class="divider_space_thin"></div>
 
 <div class="row">
   <div class="col col_1_3">
-<a href="#"><img src="images/temp/register_img_1.png" width="146" height="146" alt=""></a>
-        <div class="register_name">Bed Bath & Beyond<br>
-        <a href="#">GO TO STORE</a>
+    <a href="http://zola.com/registry/cambiandben" target="_blank"><img src="images/register_zola.png" width="146" height="146" alt=""></a>
+        <div class="register_name">HONEYMOON FUND<br>
+        <a href="http://zola.com/registry/cambiandben" target="_blank">VISIT ZOLA.COM</a>
         </div>
     </div>
-
+<!--
   <div class="col col_1_3">
-<a href="#"><img src="images/temp/register_img_2.png" width="146" height="146" alt=""></a>
+    <a href="#"><img src="images/temp/register_img_2.png" width="146" height="146" alt=""></a>
         <div class="register_name">Target<br>
         <a href="#">GO TO STORE</a>
         </div>
 
     </div>
-  <div class="col col_1_3">
-<a href="#"><img src="images/temp/register_img_3.png" width="146" height="146" alt=""></a>
+    <div class="col col_1_3">
+    <a href="#"><img src="images/temp/register_img_3.png" width="146" height="146" alt=""></a>
         <div class="register_name">Amazon<br>
         <a href="#">GO TO STORE</a>
-        </div>
     </div>
+</div>-->
 </div>
 
 <div class="divider_space"></div>
