--- a/templates/registry.mustache
+++ b/templates/registry.mustache
@@ -41,7 +41,7 @@ registered with <a href="http://zola.com/registry/cambiandben" target="_blank">z
 <div class="bot_box_inner">
 
     <span class="box_icon icon_rsvp"></span>
-<p>DON’T FORGET TO RSVP! YOU CAN DO THAT <a href="rsvp.html" class="link-more">HERE</a></p>
+<p>DON’T FORGET TO RSVP! YOU CAN DO THAT <a href="/rsvp" class="link-more">HERE</a></p>
 
 </div>
 <!--/ bottom box content -->
