some small bug fixes.

--- a/assets/style.css
+++ b/assets/style.css
@@ -520,6 +520,10 @@ p.wp-caption-text, .frame_caption {
 .row .col_1_2 {width:238px}
 .row .col_1_3 {width:152px}
 .row .col_2_3 {width:324px}
+.row .col_center {
+	width: 100%;
+	margin: auto;
+}
 
 .row .alpha, .col.alpha {
 	margin-left:0}
