--- a/templates/registry.mustache
+++ b/templates/registry.mustache
@@ -9,7 +9,7 @@ registered with <a href="http://zola.com/registry/cambiandben" target="_blank">z
 <div class="divider_space_thin"></div>
 
 <div class="row">
-  <div class="col col_1_3">
+  <div class="col col_center">
     <a href="http://zola.com/registry/cambiandben" target="_blank"><img src="images/register_zola.png" width="146" height="146" alt=""></a>
         <div class="register_name">HONEYMOON FUND<br>
         <a href="http://zola.com/registry/cambiandben" target="_blank">VISIT ZOLA.COM</a>
