--- a/templates/body.mustache
+++ b/templates/body.mustache
@@ -23,30 +23,8 @@
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72-ipad.png">
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114-iphone4.png">
 
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="screen.css">
-<link rel="stylesheet" href="styles/beige-turqoise.css">
-<!-- custom CSS -->
-<link rel="stylesheet" href="custom.css">
-
-<!-- main JS libs  -->
-<script src="js/libs/modernizr-2.5.3.min.js"></script>
-<script src="js/libs/respond.min.js"></script>
-<script src="js/libs/jquery.min.js"></script>
-<script src="js/libs/handlebars.min.js"></script>
-<script src="js/jquery.customInput.js"></script>
-<script src="js/countdown.js"></script>
-
-<!-- scripts  -->
-<script src="js/jquery.easing.1.3.min.js"></script>
-<script src="js/general.js"></script>
-
-<!-- shortcode: Lightbox prettyPhoto -->
-<link rel="stylesheet" href="css/prettyPhoto.css">
-<script src="js/jquery.prettyPhoto.js"></script>
-
-<!-- carousel -->
-<script src="js/jquery.carouFredSel.min.js"></script>
+<link rel="stylesheet" href="combined.css">
+<script src="js/combined.js"></script>
 
 </head>
 <body>
