added typeahead search to wedding site.

--- a/templates/body.mustache
+++ b/templates/body.mustache
@@ -111,7 +111,9 @@
 
        <div class="rowSubmit field_text aligncenter">
          <label class="label_title"><strong>Email:</strong></label>
-         <input type="text" name="email" id="email" value="" class="inputtext input_middle required">
+         <div id="typeahead-container">
+           <input type="text" name="email" id="email" value="" class="search-input inputtext input_middle required" placeholder="enter your email">
+         </div>
        </div>
 
        <div class="clear"></div>
