added photo, added rsvp by date.

--- a/templates/gallery.mustache
+++ b/templates/gallery.mustache
@@ -26,6 +26,11 @@
       <span class="img_tl"></span><span class="img_tr"></span><span class="img_bl"></span><span class="img_br"></span>
     </div>
 
+            <div class="frame_box frame_small">
+       <a href="images/photos/ventana_ben_cambi.jpg" data-rel="prettyPhoto[mg_1]"><img src="images/photos/ventana_ben_cambi_gallery.jpg" width="135" height="93" alt=""></a>
+      <span class="img_tl"></span><span class="img_tr"></span><span class="img_bl"></span><span class="img_br"></span>
+    </div>
+
             <div class="clear"></div>
       </div>
         <!--/ slide -->
