--- a/templates/rsvp.mustache
+++ b/templates/rsvp.mustache
@@ -5,6 +5,9 @@
   that we sent your save-the-date message to. <a href="mailto:bencoe@gmail.com">Let us
   know</a> if you run into any problems!
 </p>
+<p>
+  Please RSVP by September 23<sup>rd</sup> 2015.
+</p>
 <div class="clear"></div>
 
 <div id="error" class="error-message" style="display: none; background-color: rgba(150, 0, 0, 0.5);"></div>
