show attending rather than food

--- a/templates/body.mustache
+++ b/templates/body.mustache
@@ -103,7 +103,7 @@
   </footer>
 
   <script id="guest-row-template" type="text/x-handlebars-template">
-    <li class="guest-row"><span>\{{email}}</span><span>\{{food}}</span><span>\{{#unless isGuest}}(<a href="#" class="delete-link" data-email="\{{email}}">delete</a>)\{{/unless}}</span></li>
+    <li class="guest-row"><span>\{{email}}</span><span>\{{attending}}</span><span>\{{#unless isGuest}}(<a href="#" class="delete-link" data-email="\{{email}}">delete</a>)\{{/unless}}</span></li>
   </script>
 
   <script id="rsvp-lookup-template" type="text/x-handlebars-template">
